chapter6/6-30.txt
$ g++ -std=c++11 exercise_30.cpp
  exercise_30.cpp: In function ‘bool str_subrange(const string&, const string&)’:
  exercise_30.cpp:16:13: error: return-statement with no value, in function returning ‘bool’ [-fpermissive]
               return;
               ^
no error message when compiling for error 2.

This warning appears when using clang++

exercise_30.cpp:18:1: warning: control may reach end of non-void function [-Wreturn-type]
}
^
1 warning generated.
